--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,10 @@
+
 body {
-    background: rgba(208,228,245,0.36) url("http://www.themarketingsage.com/wp-content/uploads/2015/08/about-me-leon-severan-we-buy-houses.jpg") no-repeat local 50% 50%;
-    }
-    body {
-     padding: 50px 20px; 
-    }
+  padding: 50px 20px; 
+ }
 
    body main div p {
-        text-shadow: 2px 2px 2px #570b24;
+        text-shadow: 5px 5px 5px #570b15;
         }
 
 
@@ -16,11 +14,27 @@ body {
             background: -webkit-linear-gradient(45deg, #899aa5 0%, #738692 72%, #748997 100%);
             background: linear-gradient(45deg, #7b8a94 0%, #879aa7 72%, #83939e 100%);
             }
-            body {
+            body main {
               min-height: 150px;
               text-align: center;
             }
 
+            footer nav div {
+              min-height: 150px;
+              text-align: center;
+            }
+
+
             body main div p {
-                border: 13px dashed rgba(118,17,17,0.97);
+                border: 10px dashed rgba(97, 87, 64, 0.918);
                 }
+
+                body header nav img {
+                  border: 10px dashed rgba(129, 41, 6, 0.918);
+                  position: fixed;
+                  
+                  }
+
+
+
+                
